# git-backup

./: .gitignore  Pipfile  Readme.md  git_handler.py  main.py  pyproject.toml
.github/workflows/: pylint.yml
git-backup/: git-backup.py  git_handler.py
gitbackup/: git_backup.py
